# remote-status-notifier

./: .gitignore  README.md  main.py  pyproject.toml  remote_status_notifier.py  requirements.txt  run.bat  run_in_venv.ps1
src/: main.py  remote_status_notifier.py
src/notifier/: logic.py  main.py  slack_agent.py  user_detector.py  utils.py
src/notifier/icon/: README.md  favicon.pixil
